# adminx

./: .gitignore  Cargo.toml  README.md
src/: dashboard.rs  error.rs  filters.rs  handlers.rs  lib.rs  menu.rs  registry.rs  resource.rs  route.rs  router.rs
src/configs/: initializer.rs
src/controllers/: auth_controller.rs  dashboard_controller.rs  mod.rs  resource_controller.rs
src/errors/: custom_error.rs  custom_macros.rs
src/helpers/: asset_helper.rs  form_helper.rs  mod.rs  resource_helper.rs  template_helper.rs
src/helpers/downloads/: csv_download.rs  json_download.rs
src/middleware/: role_guard.rs
src/models/: adminx_model.rs
src/templates/: B-list.html.tera.B  Bedit.html.tera.B  edit.html.tera  footer.html.tera  header.html.tera  layout.html.tera  list.html.tera  login.html.tera  new.html.tera  view.html.tera
src/utils/: auth.rs  database.rs  jwt.rs  macros.rs  mod.rs  rbac.rs
