[package]
name = "adminx"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
mongodb = { version = "2.4", features = ["tokio-runtime"] }
once_cell = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3.31"
tera = "1.19"
lazy_static = "1.4"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
async-trait = "0.1"
querystring = "1.1"
actix-service = "2.0.3"
jsonwebtoken = "9.3.1"


[lib]
path = "src/lib.rs"


